# iftta

./: .env.example  .gitignore  API.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.prod.yml  docker-compose.yml  init-db.sql
benches/: node_type_condition_benchmark.rs  node_type_sentiment_analysis_benchmark.rs
benches/data/: condition_array_operations.json  condition_complex.json  condition_nested_fields.json  condition_simple.json
charts/ifthisthenat/: Chart.yaml  README.md  values.yaml
charts/ifthisthenat/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
docs/: DENYLIST.md  blueprints.md  configuration.md  deployment-kubernetes.md  deployment-standalone.md  k3s-local-deployment.md  production.env  storage-and-queues.md
docs/k3s-examples/: README.md  docker-compose.yaml  init-db.sql  integration-test.sh  k6-load-test.js  local-storage.yaml  setup-k3s.sh  values-local-dev.yaml
examples/: cron_interval_validation.rs  cron_serde_example.rs
migrations/: 1_init.sql  2_add_session_type.sql  3_add_blueprint_enabled.sql  4_add_blueprint_error.sql  5_add_scheduler_state.sql  6_add_prototypes.sql  7_add_prototype_shared.sql  8_add_denylist.sql
src/: config.rs  constants.rs  consumer.rs  errors.rs  identity_cache.rs  leadership.rs  lib.rs  metrics.rs  processor.rs  prototype_service.rs  serialization.rs  test_helpers.rs  throttle.rs  validation.rs
src/atproto/: auth.rs  mod.rs  utilities.rs
src/denylist/: mod.rs  noop.rs  postgres.rs
src/engine/: blueprint_evaluator.rs  common.rs  datalogic_utils.rs  evaluator.rs  mod.rs  node_evaluator_factory.rs  node_type_common.rs  node_type_condition.rs  node_type_debug_action.rs  node_type_facet_text.rs  node_type_get_record.rs  node_type_jetstream_entry.rs  node_type_parse_aturi.rs  node_type_periodic_entry.rs  node_type_publish_record.rs  node_type_publish_webhook_common.rs  node_type_publish_webhook_direct.rs  node_type_publish_webhook_queue.rs  node_type_sentiment_analysis.rs  node_type_transform.rs  node_type_webhook_entry.rs  node_type_zap_entry.rs
src/http/: aip_utils.rs  auth.rs  blueprint_helpers.rs  context.rs  errors.rs  handle_auth.rs  handle_blueprints.rs  handle_dashboard.rs  handle_documentation.rs  handle_index.rs  handle_prototypes.rs  handle_public_prototypes.rs  handle_webhooks.rs  handle_wellknown.rs  handle_xrpc.rs  handler_app_password.rs  middleware_auth.rs  mod.rs  server.rs  templates.rs
src/queue_adapter/: mod.rs  mpsc.rs  redis.rs
src/storage/: atpoauth.rs  blueprint.rs  blueprint_cache.rs  blueprint_cache_memory.rs  blueprint_cache_redis.rs  cache.rs  cached_blueprint_storage.rs  cached_node_storage.rs  evaluation_result.rs  evaluation_result_filesystem_example.rs  identity.rs  mod.rs  node.rs  node_cache.rs  node_cache_memory.rs  node_cache_redis.rs  node_normalizer.rs  oauth_request.rs  prototype.rs  scheduler_state.rs  session.rs  session_test.rs  traits.rs
src/tasks/: blueprint.rs  blueprint_adapter.rs  manager.rs  mod.rs  scheduler.rs  webhook.rs
static/: robots.txt  site.webmanifest
templates/: base.html  blueprint_create.html  blueprint_edit.html  blueprint_evaluation_results.html  dashboard.html  documentation.html  evaluate_blueprint.html  evaluate_node.html  index.html  login.html  prototype_builder.html  prototypes.html  public_prototypes.html  view_prototype.html
tests/: denylist_integration_test.rs  denylist_trait_usage_test.rs  node_normalization_test.rs  test_blueprint_error_handling.rs  test_redis_cursor.rs  webhook_evaluator_selection.rs
