[package]
name = "ifthisthenat"
version = "0.1.0"
edition = "2024"
authors = ["Nick Gerakines <nick.gerakines@gmail.com>"]
description = "If-This-Then-AT, you get the idea"
repository = "https://tangled.sh/@ngerakines.me/ifthisthenat"
license = "MIT"
publish = false
build = "build.rs"
default-run = "ifthisthenat"

[features]
default = ["reload"]
embed = ["dep:minijinja-embed", "dep:rust-embed"]
reload = ["dep:minijinja-autoreload", "minijinja/loader", "axum-template/minijinja-autoreload"]

[build-dependencies]
minijinja-embed = {version = "2.7"}

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
atproto-client = "0.12.0"
atproto-identity = { version = "0.12.0", features = ["lru", "zeroize"] }
atproto-jetstream = "0.12.0"
atproto-oauth = { version = "0.12.0", features = ["lru", "zeroize"] }
atproto-oauth-aip = "0.12.0"
atproto-oauth-axum = { version = "0.12.0", features = ["zeroize"] }
atproto-record = "0.12.0"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", default-features = false, features = ["cookie", "cookie-private", "form"] }
axum-template = { version = "3.0", features = ["minijinja"] }
base64 = "0.22.1"
bincode = "1.3"
cadence = "1.5"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
chrono = { version = "0.4", default-features = false, features = ["std", "alloc", "now", "serde"] }
cookie = "0.18"
crockford = "1.2.1"
croner = { version = "3.0", features = ["serde"] }
datalogic-rs = "3.0.34"
fastbloom = "0.14"
hf-hub = "0.4.3"
http = "1.1"
lru = "0.12"
metrohash = "1.0"
minijinja = { version = "2.7", features = ["builtins", "json", "urlencode"] }
minijinja-autoreload = { version = "2.7", optional = true }
minijinja-embed = { version = "2.7", optional = true }
once_cell = "1.20"
ordermap = "0.5"
parking_lot = "0.12"
rand = "0.8"
regex = "1.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rust-embed = { version = "8.5", optional = true }
serde = { version = "1.0", features = ["alloc", "derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
serde_json_canonicalizer = "0.3.1"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "uuid"] }
thiserror = "2.0"
tokenizers = "0.22.1"
tokio = { version = "1.41", features = ["bytes", "macros", "net", "rt", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["net", "rt", "tracing"] }
tower = { version = "0.5", features = ["limit", "timeout", "tokio", "tracing"] }
tower-http = { version = "0.6", features = ["cors", "fs", "timeout", "trace", "tracing"] }
tracing = { version = "0.1", features = ["async-await", "log"] }
tracing-serde = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "json", "fmt"] }
# tracing-opentelemetry = "0.27"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-http = "0.27"
ulid = "1.2.1"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1.11", features = ["v4", "serde"] }
zeroize = { version = "1.8.1", features = ["zeroize_derive"] }
# sentry = { version = "0.34", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
# sentry-tracing = "0.34"
deadpool = "0.12.2"
deadpool-redis = { version = "0.20.0", features = ["connection-manager", "tokio-comp", "tokio-rustls-comp", "script"] }
moka = { version = "0.12", features = ["future"] }

[dev-dependencies]
wiremock = "0.6"
criterion = "0.5"

[[bench]]
name = "node_type_sentiment_analysis_benchmark"
harness = false

[[bench]]
name = "node_type_condition_benchmark"
harness = false
